# Cpp-NSU

./: .gitignore  CMakeLists.txt  README.md  strategy_make.cpp  strategy_type.h
Lab1.BigInt/: .gitignore  CMakeLists.txt  bigInt.h  bigint.cpp  bigint_test.cpp  main.cpp
Lab1.BigInt/bigint/: bigint.cpp
Lab2.Dilemma/: CMakeLists.txt  main.cpp  strategy_make.h  strategy_type.cpp
Lab2.Dilemma/GameAtributes/: Game.cpp  Game.h  GameResult.cpp  GameResult.h  InputData.cpp  InputData.h  Log.cpp  Log.h  ScoringMatrix.cpp  ScoringMatrix.h  StrategyFactory.cpp  StrategyFactory.h  StrategyParser.cpp  StrategyParser.h
Lab2.Dilemma/GameAtributes/Factory/: Factory.h
Lab2.Dilemma/GameAtributes/Game/: Game.cpp  Game.h
Lab2.Dilemma/GameAtributes/GameBuild/: GameBuild.cpp  GameBuild.h
Lab2.Dilemma/GameAtributes/GameModes/: DetailedMode.cpp  DetailedMode.h  FastMode.cpp  FastMode.h  GameMode.h  TournamentMode.cpp  TournamentMode.h
Lab2.Dilemma/GameAtributes/GameModes/DetailedMode/: DetailedMode.cpp  DetailedMode.h
Lab2.Dilemma/GameAtributes/GameModes/FastMode/: FastMode.cpp  FastMode.h
Lab2.Dilemma/GameAtributes/GameModes/GameMode/: GameMode.cpp  GameMode.h
Lab2.Dilemma/GameAtributes/GameModes/TournamentMode/: TournamentMode.cpp  TournamentMode.h
Lab2.Dilemma/GameAtributes/GameResult/: GameResult.cpp  GameResult.h
Lab2.Dilemma/GameAtributes/InputData/: InputData.cpp  InputData.h  help.txt
Lab2.Dilemma/GameAtributes/Log/: Log.cpp  Log.h
Lab2.Dilemma/GameAtributes/ScoringMatrix/: ScoringMatrix.cpp  ScoringMatrix.h  scoringMatrix.txt
Lab2.Dilemma/Test/: DilemmaTest.cpp  DilemmaTest.h
Lab2.Dilemma/strategyTypes/: AlwaysCooperate.cpp  AlwaysCooperate.h  AlwaysDefect.h  AlwaysDistrust.cpp  AlwaysDistrust.h  CoopUntilDefect.cpp  CoopUntilDefect.h  CustomAct.cpp  CustomAct.h  RandomAct.cpp  RandomAct.h  RatAct.cpp  RatAct.h  Strategy.cpp  Strategy.h
Lab2.Dilemma/strategyTypes/AlwaysCooperate/: AlwaysCooperate.cpp  AlwaysCooperate.h
Lab2.Dilemma/strategyTypes/AlwaysDefect/: AlwaysDefect.cpp  AlwaysDefect.h
Lab2.Dilemma/strategyTypes/CoopUntilDefect/: CoopUntilDefect.cpp  CoopUntilDefect.h
Lab2.Dilemma/strategyTypes/CustomAct/: CustomAct.cpp  CustomAct.h
Lab2.Dilemma/strategyTypes/CustomStrategy/: CustomStrategy.h
Lab2.Dilemma/strategyTypes/MetaStrategy/: MetaStrategy.cpp  MetaStrategy.h
Lab2.Dilemma/strategyTypes/RandomAct/: RandomAct.cpp  RandomAct.h
Lab2.Dilemma/strategyTypes/RatCat/: RatAct.cpp  RatAct.h
